tests/baselines/reference/duplicateExportAssignments.errors.txt
foo1.ts(3,10): error TS2300: Duplicate identifier 'export='.
foo1.ts(4,10): error TS2300: Duplicate identifier 'export='.
foo2.ts(3,10): error TS2300: Duplicate identifier 'export='.
foo2.ts(4,10): error TS2300: Duplicate identifier 'export='.
foo3.ts(5,2): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
foo3.ts(7,10): error TS2300: Duplicate identifier 'export='.
foo3.ts(8,10): error TS2300: Duplicate identifier 'export='.
foo4.ts(1,10): error TS2300: Duplicate identifier 'export='.
foo4.ts(8,10): error TS2300: Duplicate identifier 'export='.
foo5.ts(4,10): error TS2300: Duplicate identifier 'export='.
foo5.ts(5,10): error TS2300: Duplicate identifier 'export='.
foo5.ts(6,10): error TS2300: Duplicate identifier 'export='.


==== foo1.ts (2 errors) ====
    var x = 10;
    var y = 20;
    export = x;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    
==== foo2.ts (2 errors) ====
    var x = 10;
    class y {};
    export = x;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    
==== foo3.ts (3 errors) ====
    namespace x {
    	export var x = 10;
    }
    class y {
    	y: number;
    	~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }
    export = x;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    
==== foo4.ts (2 errors) ====
    export = x;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    function x(){
    	return 42;
    }
    function y(){
    	return 42;
    }
    export = y;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    
==== foo5.ts (3 errors) ====
    var x = 5;
    var y = "test";
    var z = {};
    export = x;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = y;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    export = z;
             ~
!!! error TS2300: Duplicate identifier 'export='.
    